@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkgame.h,v 1.128 2008/03/15 10:16:27 Superfly_Jon Exp $
+ * $Id: gtkgame.h,v 1.129 2008/03/16 16:16:11 Superfly_Jon Exp $
  */
 
 #ifndef _GTKGAME_H_
@@ -47,6 +47,7 @@ extern int frozen;
 extern int fTTY;
 extern int fX;
 extern int fToolbarShowing;
+extern int inCallback;
 extern unsigned int nDelay;
 extern GtkWidget *hpaned;
 extern GtkWidget *pom;
